--- a/src/main/resources/retussCode.fxml
+++ b/src/main/resources/retussCode.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,20 +9,16 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.morichan.retuss.window.CodeController">
     <children>
         <BorderPane layoutY="38.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <top>
-                <MenuBar BorderPane.alignment="CENTER">
-                    <menus>
-                        <Menu mnemonicParsing="false" text="File">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Close" />
-                            </items>
-                        </Menu>
-                    </menus>
-                </MenuBar>
-            </top>
             <center>
                 <TabPane fx:id="codeTabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" />
             </center>
+         <top>
+            <ButtonBar prefHeight="18.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+              <buttons>
+                <Button maxWidth="109.0" minWidth="30.0" mnemonicParsing="false" onAction="#createClass" prefHeight="25.0" prefWidth="86.0" text="Create Class" />
+              </buttons>
+            </ButtonBar>
+         </top>
         </BorderPane>
     </children>
 </AnchorPane>
