feat: シーケンス図のタブを追加

--- a/src/main/resources/retussMain.fxml
+++ b/src/main/resources/retussMain.fxml
@@ -83,6 +83,30 @@
                                                             </children>
                                                         </AnchorPane>
                                                     </content></Tab>
+                                    <Tab text="Sequence Diagram">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                             <children>
+                                                <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <top>
+                                                      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                                        <items>
+                                                          <Button mnemonicParsing="false" text="Normal" />
+                                                        </items>
+                                                      </ToolBar>
+                                                   </top>
+                                                   <left>
+                                                      <AnchorPane prefHeight="839.0" prefWidth="955.0" BorderPane.alignment="CENTER">
+                                                         <children>
+                                                            <TabPane fx:id="tabPaneInSequenceTab" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </left>
+                                                </BorderPane>
+                                             </children>
+                                          </AnchorPane>
+                                      </content>
+                                    </Tab>
                                             </tabs>
                                         </TabPane>
                                     </children>
