--- a/src/main/resources/retussMain.fxml
+++ b/src/main/resources/retussMain.fxml
@@ -58,9 +58,9 @@
                                                                             <items>
                                                                                 <Button fx:id="normalButtonInCD" mnemonicParsing="false" onAction="#selectNormalInCD" text="Normal" />
                                                                                 <Button fx:id="classButtonInCD" mnemonicParsing="false" onAction="#selectClassInCD" text="Class" />
-                                                                                <Button fx:id="noteButtonInCD" mnemonicParsing="false" onAction="#selectNoteInCD" text="Note" />
                                                                                 <Button fx:id="compositionButtonInCD" mnemonicParsing="false" onAction="#selectCompositionInCD" text="Composition" />
                                                             <Button fx:id="generalizationButtonInCD" mnemonicParsing="false" onAction="#selectGeneralizationInCD" text="Generalization" />
+                                                                                <Button fx:id="noteButtonInCD" disable="true" mnemonicParsing="false" onAction="#selectNoteInCD" text="Note" visible="false" />
                                                                             </items>
                                                                         </ToolBar>
                                                                     </top>
